# candleLight_fw

./: .codespellrc  .cproject  .editorconfig  .gitignore  .gitmodules  .mailmap  .project  .travis.yml  70-candle-usb.rules  CMakeLists.txt  LICENSE.md  Makefile  README.md  build_all.sh  build_canable.sh  gdb_oocd.cmds  openocd.cfg  uncrustify.cfg
.github/workflows/: ci.yml  cmake.yml  compile-arm-gnu-toolchain.yml  compile.yml  md-link.yml  pr.yml
cmake/: FindDFUSuffix.cmake  arm-none-eabi-clang.cmake  arm-none-eabi-gcc.cmake  gcc-arm-none-eabi-8-2019-q3-update.cmake  gitversion.cmake  install-debian-gcc-arm-none-eabi
include/: board.h  can.h  can_common.h  can_drv.h  compiler.h  config.h  device.h  dfu.h  flash.h  gpio.h  gs_usb.h  host_frame.h  led.h  list.h  mxconstants.h  queue.h  stm32f0xx_hal_conf.h  stm32f0xx_it.h  timer.h  usbd_conf.h  usbd_desc.h  usbd_dfu.h  usbd_gs_can.h  util.h  util_internal.h  util_macro.h
include/zephyr/sys/: util.h  util_internal.h  util_macro.h
ldscripts/: STM32F042X6.ld  STM32F072XB.ld  STM32F407XE.ld  STM32G0B1XK.ld  ldscript.ld  ldscript_base.inc  mem.ld  sections.ld
libs/STM32_HAL/: CMakeLists.txt
libs/STM32_HAL/config/: hal_include.h  stm32f0xx_hal_conf.h  stm32f4xx_hal_conf.h  stm32g0xx_hal_conf.h  stm32g4xx_hal_conf.h
libs/STM32_HAL/include/cmsis/: cmsis_device.h  cmsis_gcc.h
libs/STM32_HAL/include/stm32g0xx/: stm32g0xx_ll_usb.h
libs/STM32_HAL/include/stm32g4xx/: stm32g4xx_hal_pcd.h  stm32g4xx_ll_usb.h
libs/STM32_HAL/src/cmsis/: startup_stm32f072xb.S
libs/STM32_HAL/src/cortexm/: exception_handlers.c
libs/STM32_HAL/src/stm32g4xx/: stm32g4xx_hal_pcd.c  stm32g4xx_hal_pcd_ex.c  stm32g4xx_ll_usb.c
libs/STM32_HAL/stm32f0xx-hal-driver/Inc/: stm32f0xx_hal_rcc.h  stm32f0xx_hal_tim.h
libs/STM32_HAL/stm32f0xx-hal-driver/Src/: stm32f0xx_hal_can.c  stm32f0xx_hal_flash.c  stm32f0xx_hal_pcd.c  stm32f0xx_hal_rcc.c  stm32f0xx_hal_tim.c  stm32f0xx_hal_tim_ex.c  stm32f0xx_ll_usb.c
libs/STM32_HAL/stm32f4xx-hal-driver/Inc/: stm32f4xx_hal_tim.h  stm32f4xx_ll_usb.h
libs/STM32_HAL/stm32f4xx-hal-driver/Src/: stm32f4xx_hal_can.c  stm32f4xx_hal_tim.c  stm32f4xx_hal_tim_ex.c
libs/STM32_HAL/stm32g0xx-hal-driver/Inc/: stm32g0xx_hal_def.h  stm32g0xx_hal_pcd.h  stm32g0xx_hal_rcc.h  stm32g0xx_hal_tim.h
libs/STM32_HAL/stm32g0xx-hal-driver/Src/: stm32g0xx_hal.c  stm32g0xx_hal_fdcan.c  stm32g0xx_hal_gpio.c  stm32g0xx_hal_pcd.c  stm32g0xx_hal_tim.c  stm32g0xx_ll_usb.c
libs/STM32_HAL/stm32g4xx-hal-driver/Inc/: stm32g4xx_hal_gpio.h  stm32g4xx_hal_pcd.h  stm32g4xx_hal_pwr.h  stm32g4xx_hal_pwr_ex.h  stm32g4xx_hal_rcc.h  stm32g4xx_hal_rcc_ex.h  stm32g4xx_hal_tim.h  stm32g4xx_ll_usb.h
libs/STM32_HAL/stm32g4xx-hal-driver/Inc/Legacy/: stm32_hal_legacy.h
libs/STM32_HAL/stm32g4xx-hal-driver/Src/: stm32g4xx_hal.c  stm32g4xx_hal_fdcan.c  stm32g4xx_hal_gpio.c  stm32g4xx_hal_pcd.c  stm32g4xx_hal_pcd_ex.c  stm32g4xx_hal_pwr.c  stm32g4xx_hal_pwr_ex.c  stm32g4xx_hal_rcc.c  stm32g4xx_hal_rcc_ex.c  stm32g4xx_ll_usb.c
libs/STM32_USB_Device_Library/: CMakeLists.txt
libs/STM32_USB_Device_Library/config/: usbd_conf.h
src/: can.c  can_common.c  dfu.c  flash.c  gpio.c  interrupts.c  led.c  main.c  no-op.c  queue.c  startup.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c  timer.c  usbd_conf.c  usbd_desc.c  usbd_gs_can.c  util.c
src/boards/: g0b1-2C2L_USB.c  g0b1-CONVERTDEVICE_xCANFD.c  g0b1-WeActStudio_USB2CANFDV1.c  g0b1-budgetcan.c  g0b1-candleLightFD.c  g0b1-nucleo_g0b1re.c  g431-CANable2_MKS.c  legacy.c
src/can/: bxcan.c  fdcan.c  m_can.c
src/device/: can_g0.c  device_f0.c  device_f4.c  device_g0.c  device_g4.c
system/include/cmsis/: README_DEVICE.txt
test/: README.md  test.sh
tests/: test_invariant_usbd_gs_can.c
